--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --hot"
   },
-  "author": "Gowtham",
+  "author": "Anish",
   "license": "ISC",
   "dependencies": {
     "react": "^16.1.1",
